--- a/style.css
+++ b/style.css
@@ -393,14 +393,14 @@ h1{
 }
 @import url("https://fonts.googleapis.com/css2?family=&display=swap");
 
-      svg {
+      svg:not(.games) {
         font-family: "Major Mono Display", sans-serif;
         width: 100%; height: 50%;
           margin: 0;
           overflow: visible;
 
       }
-      svg text {
+      svg:not(.games):not(.things) text {
         animation: stroke 30s infinite alternate;
         stroke-width: 2;
         stroke: var(--mt-primary-color);
@@ -408,7 +408,7 @@ h1{
           text-shadow: 2px 4px 3px rgba(0,0,0,1);
           
       }
-  svg:hover{
+  svg:hover:not(.games):not(.things){
         animation: stroke 30s infinite alternate;
         stroke-width: 2;
         stroke: #9146ff;
@@ -1673,4 +1673,38 @@ button:hover {
             text-shadow: 2px 4px 20px rgba(255,255,255,1);
 
 }
+  svg.games {
+        width: 30px; height: 100%;
+          margin: 0;
+          overflow: visible;
+
+      }
+      svg:has(.games) text {
+     
+        font-size: 50px;
+        
+          
+      }
+  svg:has(.games):hover{
+              font-size: 50px;
+
+     
+      }
+  svg.things {
+        width: 30px; height: 100%;
+          margin: 0;
+          overflow: visible;
+
+      }
+      svg:has(.things) text {
+     
+        font-size: 50px;
+        
+          
+      }
+  svg:has(.things):hover{
+              font-size: 50px;
+
+     
+      }
 
