--- a/style.css
+++ b/style.css
@@ -138,46 +138,200 @@
     --mt-icon-invalid: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='rgb(150, 74, 80)' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Ccircle cx='12' cy='12' r='10'%3E%3C/circle%3E%3Cline x1='12' y1='8' x2='12' y2='12'%3E%3C/line%3E%3Cline x1='12' y1='16' x2='12.01' y2='16'%3E%3C/line%3E%3C/svg%3E");
     color-scheme: dark;
 }
-
-@media (min-width: 765px)  {
+@media (min-width: 768px)  {
   :root {
-    --mt-font-size:  112.5% !important;/*281.25%; */
-  }
- 
-
-}
-@media (min-width: 1080px)  {
-  :root {
-    --mt-font-size:  112.5% !important;/*281.25%; */
-  }
-   
+    --mt-font-size:  54.6049208% !important;/*281.25%; */
+               #link{
+    margin-left: 3vw;
 }
 
-
-@media screen and (min-width: 1280px)  {
-  :root {
-    --mt-font-size: 125%  !important;
+#lin{
+    margin-left: 50px;
+}
   }
+     nav{
+          width: 97.8125% !important;
+             left: 15px;
+
+      }
+ }
+@media (min-width: 1125px)  {
+  :root {
+    --mt-font-size:  68.8351668% !important;/*281.25%; */
+               #link{
+    margin-left: 5vw;
+}
+
+#lin{
+    margin-left: 50px;
+}
+  }
+     nav{
+          width: 97.8125% !important;
+             left: 15px;
+
+      }
+ }
+@media (min-width: 1182px)  {
+  :root {
+    --mt-font-size:  63.2769251% !important;/*281.25%; */
+               #link{
+    margin-left: 10vw;
+}
+
+#lin{
+    margin-left: 50px;
+}
+  }
+    nav{
+          width: 97.8125% !important;
+            left: 15px;
+
+      } 
+ }
+@media (min-width: 1280px)  {
+  :root {
+    --mt-font-size:  67.9407714% !important;/*281.25%; */
+               #link{
+    margin-left: 13vw;
+}
+
+#lin{
+    margin-left: 50px;
+}
+  }
+     nav{
+          width: 97.8125% !important;
+                     left: 15px;
+
+      }
+ }
+@media (min-width: 1396px)  {
+  :root {
+    --mt-font-size:  72.83781% !important;/*281.25%; */
+               #link{
+    margin-left: 20vw;
+}
+
+#lin{
+    margin-left: 50px;
+}
+  }
+    nav{
+          width: 97.8125% !important;
+            left: 15px;
+
+      } 
+ }
+@media (min-width: 1536px)  {
+  :root {
+    --mt-font-size:  77.9797% !important;/*281.25%; */
+               #link{
+    margin-left: 27vw;
+}
+
+#lin{
+    margin-left: 50px;
+}
+  }
+     nav{
+          width: 97.8125% !important;
+             left: 15px;
+
+      }
+ }
+@media (min-width: 1617px)  {
+  :root {
+    --mt-font-size:  83.378685% !important;/*281.25%; */
+               #link{
+    margin-left: 30vw;
+}
+
+#lin{
+    margin-left: 50px;
+}
+  }
+     nav{
+          width: 97.8125% !important;
+             left: 15px;
+
+      }
+ }
+@media (min-width: 1707px)  {
+  :root {
+    --mt-font-size:  89.047619% !important;/*281.25%; */
+               #link{
+    margin-left: 30vw;
+}
+
+#lin{
+    margin-left: 50px;
+}
+  }
+     nav{
+          width: 54.6049208% !important;
+             left: 15px;
+
+      }
+ }
+@media screen and (min-width: 1807px)  {
+  :root {
+    --mt-font-size: 105%  !important;
+
+    #link{
+    margin-left: 39vw;
+}
+
+#lin{
+    margin-left: 50px;
+}
+  }
+     nav{
+          width: 97.8125% !important;
+             left: 15px;
+
+      }
+       
       
     }
 
-@media only screen and (min-width: 1536px) {
+@media only screen and (min-width: 1920px) {
   :root {
-    --mt-font-size: 131.25% !important;
+    --mt-font-size: 111.25% !important;
+        #link{
+    margin-left: 42vw;
+}
+
+#lin{
+    margin-left: 50px;
+}
   }
+     nav{
+          width: 97.8125% !important;
+             left: 15px;
+
+      }
  
     
-     
-    }
+       }
 
 
-@media only screen and (min-width: 2192px) {
+@media only screen and (min-width: 2194px) {
   :root {
-    --mt-font-size: 137.8125% !important;
-  }
-  
-    
-  
+    --mt-font-size: 117.8125% !important;
+      #link{
+    margin-left: 49vw;
+}
+
+#lin{
+    margin-left: 50px;
+}
+      nav{
+          width: 97.8125% !important;
+              left: 15px;
+
+      }
+  }  
 }
 @media only screen and (prefers-color-scheme: dark) {
     :root{
@@ -245,6 +399,7 @@ background: linear-gradient(to bottom right,var(--mt-bg-color), var(--mt-bg-colo
     overflow-x: hidden;
         scroll-behavior: smooth;
     z-index: 0;
+    width: 100vw;
       /*  background-image: url("images/background2.gif"); 
     background-repeat: norepeat;
     background-size: cover;
@@ -261,6 +416,8 @@ nav{
 
             top: 0;
             bottom: 0;
+    left: 0;
+    right: 0;
             width: 100%;
     height: 100%;
             overflow-x: hidden;
@@ -268,14 +425,14 @@ nav{
     z-index: 99999999999999999999999;
     backdrop-filter: opacity(0);        
     backdrop-filter: blur(8px);
-    
+     align-items: center;
+        justify-content: center;
     background-color: rba(16, 16, 54,0);
     border: 3px solid rgba(16, 16, 54,0);
     margin-top: 0;
     box-shadow: 0px 20px 10px rgba(0,0,0,0.5);
     animation: shadow 10s ease-in-out infinite alternate;
     border-radius: 8px;
-    
                             
                          }
       @keyframes shadow {
@@ -447,6 +604,7 @@ h1{
         align-items: center;
         justify-content: center;
        text-shadow: 2px 4px 20px var(--mt-text-shadow);
+       font-size: var(--mt-font-size);
   
 }
 .typewriter p {
@@ -458,7 +616,8 @@ h1{
     letter-spacing: .1em;
     animation: typing 7s steps(60, end)  infinite alternate, blink-caret .5s step-end infinite alternate;
 text-shadow: 2px 4px 20px var(--mt-text-shadow);
-    
+           font-size: var(--mt-font-size);
+
 
 
 }
@@ -471,6 +630,7 @@ text-shadow: 2px 4px 20px var(--mt-text-shadow);
     animation: typing 7s steps(60, end)  infinite alternate blink-caret .5s step-end infinite alternate;
     margin-bottom: 100px;
 text-shadow: 2px 4px 20px var(--mt-text-shadow);
+font-size: var(--mt-font-size);
 }
  .typewriter #type  h1 {
     color: var( --mt-text-color);
@@ -480,6 +640,8 @@ text-shadow: 2px 4px 20px var(--mt-text-shadow);
     letter-spacing: .15em;
     animation: typing 7s steps(60, end), blink-caret .5s step-end infinite alternate;
   text-shadow: 2px 4px 20px var(--mt-text-shadow);
+font-size: var(--mt-font-size);
+
 }
 .typewriter #type  p {
     color: var( --mt-text-color);
@@ -490,6 +652,7 @@ text-shadow: 2px 4px 20px var(--mt-text-shadow);
     letter-spacing: .15em;
     animation: typing 7s steps(60, end), blink-caret .5s step-end infinite alternate;
     text-shadow: 2px 4px 20px var(--mt-text-shadow);
+    font-size: var(--mt-font-size);
 
 
 }
@@ -502,6 +665,8 @@ text-shadow: 2px 4px 20px var(--mt-text-shadow);
     letter-spacing: .15em;
     animation: typing 7s steps(60, end), blink-caret .5s step-end infinite alternate;
 text-shadow: 2px 4px 20px var(--mt-text-shadow);
+font-size: var(--mt-font-size);
+
 }
 @keyframes typing {
     from {
@@ -1708,6 +1873,3 @@ button:hover {
      
       }
 
-.vote{
-  background: transparent;
-}
