--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -1,5 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Oxanium:wght@300;600&display=swap");
-h1,h5{
+@font-face { font-family: RecVar; font-style: oblique 0deg 15deg; font-weight: 300 1000; src: url('RecVar1085.woff2') format('woff2'); }
+@font-face { font-family: Slkscr; src: url('slkscr.woff2') format('woff2'); }
+:root {h1,h5{
                 text-shadow: 2px 4px 20px rgba(255,255,255,1);
 
 }
@@ -8,13 +9,13 @@ body{
 }
 kp {
   font-size: 16px;
-         font-family: 'Oxanium', sans-serif;
+         font-family: 'RecVar', sans-serif;
 
 }
 
 h4 {
   padding-bottom: 2%;
-             font-family: 'Oxanium', sans-serif;
+             font-family: 'RecVar', sans-serif;
 
 }
 
@@ -35,21 +36,21 @@ color: #19dacb !important;
 
 .header {
   color: white;
-             font-family: 'Oxanium', sans-serif;
+             font-family: 'RecVar', sans-serif;
 
 }
 
 .main {
   padding: 3% 0px 3% 0px;
   margin:  0px 8% 0px 8%;
-             font-family: 'Oxanium', sans-serif;
+             font-family: 'RecVar', sans-serif;
 
 }
 
 /* Info */
 .info {
   background-color: #10181e;
-             font-family: 'Oxanium', sans-serif;
+             font-family: 'RecVar', sans-serif;
 color: white;
 }
 
@@ -59,7 +60,7 @@ color: white;
 
 .about {
   background-color: rgb(244, 244, 244);
-             font-family: 'Oxanium', sans-serif;
+             font-family: 'RecVar', sans-serif;
 
 }
 
@@ -71,12 +72,12 @@ color: white;
 /* Staff */
 .staff {
   background-color: #10181e;
-             font-family: 'Oxanium', sans-serif;
+             font-family: 'RecVar', sans-serif;
 
 }
 .staff h4 {
   background-color: #10181e;
-             font-family: 'Oxanium', sans-serif;
+             font-family: 'RecVar', sans-serif;
 color: white;
 }
 
@@ -98,7 +99,7 @@ color: white;
 
 .vip {
   background-color: rgb(244, 244, 244);
-             font-family: 'Oxanium', sans-serif;
+             font-family: 'RecVar', sans-serif;
 
 }
 
@@ -115,7 +116,7 @@ color: white;
 
   .about, .page-footer {
     text-align: center;
-               font-family: 'Oxanium', sans-serif;
+               font-family: 'RecVar', sans-serif;
 
   }
 
@@ -151,7 +152,7 @@ height: 8%;
 }
 
  .page-footer footer{
-             font-family: 'Oxanium', sans-serif;
+             font-family: 'RecVar', sans-serif;
             background-color: #10181e !important;
 }
 .center{
