--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -157,8 +157,14 @@ height: 8%;
 .center{
  margin-left: 25vw;
 }
-#rest{
+#rest1{
     margin-top: -33px;
+}
+#rest2{
+  margin-top: -33px;
+}
+#rest3{
+  margin-top: -33px;
 }
 .side-nav#mobile-demo{
     background-color: transparent;
