--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -148,7 +148,7 @@ nav {
     -ms-transition: background-color 1.5s ease-in-out;
     -o-transition: background-color 1.5s ease-in-out;
     transition: background-color 1.5s ease-in-out;
-           drop-shadow: 0px 20px 10px rgba(255,255,255,1) !important; 
+           box-shadow: 0px 20px 10px rgba(255,255,255,1) !important; 
 height: 8%;
 }
 
