--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -208,8 +208,8 @@ min-height:110px;
 max-width:500px;
 padding:24px 24px 0 24px;
 outline:0;
-color: var(--clr-alert-text);
-background-color: var(--clr-body-bg);
+color: #fff;
+background-color: #000;
 box-shadow: 0px 20px 10px rgba(0,0,0,0.5);
             backdrop-filter: blur(20px);
 
@@ -219,16 +219,16 @@ box-shadow: 0px 20px 10px rgba(0,0,0,0.5);
 margin:-24px;
 margin-bottom:0;
 padding:16px 24px;
-color: var(--clr-alert-text);
-background-color: var(--clr-body-bg);
+color: #fff;
+background-color: #000;
 }
         .alertify .ajs-footer{
 padding:4px;
 margin-left:-24px;
 margin-right:-24px;
 min-height:43px;
-color: var(--clr-alert-text);
-background-color: var(--clr-body-bg);
+color: #fff;
+background-color: #000;
 }
         .alertify .ajs-dimmer{
 position:fixed;
