--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Oxanium:wght@300;600&display=swap");
+
 h1,h5{
                 text-shadow: 2px 4px 20px rgba(255,255,255,1);
 
@@ -148,7 +149,7 @@ nav {
     -ms-transition: background-color 1.5s ease-in-out;
     -o-transition: background-color 1.5s ease-in-out;
     transition: background-color 1.5s ease-in-out;
-           box-shadow: 0px 20px 10px rgba(255,255,255,1) !important; 
+           box-shadow: 0px 20px 10px rgba(0,0,0,1) !important; 
 height: 8%;
 }
 
@@ -168,16 +169,9 @@ height: 8%;
 #rest3{
   margin-top: -33px;
 }
-.side-nav#mobile-demo{
-    margin-top: 70px;
-    background-color: transparent;
-    backdrop-filter: blur(8px);
-    width: auto;
-    z-index: 998;
-    height: auto;
-}
+
 *:not(.side-nav){
-    transition: 1.5s ease-in-out !important; 
+    transition: 1.25s ease-in-out !important; 
 }
 body::-webkit-scrollbar {
   width: 0.1rem;
@@ -201,6 +195,7 @@ body::-webkit-scrollbar:hover {
               /* top: 20%;
             bottom: 0;
                 left: 0; */
+            z-index: 99999999999999999999999999999999999999999999999999;
             border-radius: 8px;
 position:relative;
 margin:5% auto;
@@ -216,6 +211,7 @@ box-shadow: 0px 20px 10px rgba(0,0,0,0.5);
 
 }
 .alertify .ajs-header{
+    z-index: 99999999999999999999999999999999999999999999999999;
 margin:-24px;
 margin-bottom:0;
 padding:16px 24px;
@@ -223,6 +219,7 @@ color: #fff;
 background-color: #000;
 }
         .alertify .ajs-footer{
+            z-index: 99999999999999999999999999999999999999999999999999;
 padding:4px;
 margin-left:-24px;
 margin-right:-24px;
@@ -232,7 +229,7 @@ background-color: #000;
 }
         .alertify .ajs-dimmer{
 position:fixed;
-z-index:1981;
+z-index: 99999999999999999999999999999999999999999999999999;
 top:0;
 right:0;
 bottom:0;
@@ -506,4 +503,9 @@ border-bottom: 8px solid none;
             border-bottom: 8px solid none;
 
     }
-
+*:has(.side-nav){
+    transition: 1.5s ease-in-out !important; 
+}
+.glass {
+    background-color: rgba(255,255,255,0.1) !important; backdrop-filter: blur(8px) !important;
+}
